-Attempt to solve overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,3 +50,5 @@ a {
     }
   }
 }
+
+html, body { width: 100vw; height: 100vh; overflow: hidden;}
